<resources>
    <string name="app_name">Tonite Alive</string>

    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="latest_activity">Activity</string>
    <string name="search">Search</string>
    <string name="camera">Camera</string>
    <string name="Profile">Profile</string>
</resources>
