<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sign_up"
        android:id="@+id/textView"
        android:layout_marginTop="37dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="48dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usernameField"
        android:layout_below="@+id/textView"
        android:layout_marginTop="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/username"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailField"
        android:layout_below="@+id/usernameField"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:layout_alignParentEnd="true"
        android:hint="@string/email"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordField"
        android:hint="@string/password"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/confirmPasswordField"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/passwordField"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/confirm_password"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/signUpButton"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/confirmPasswordField"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorAccent"/>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_above="@+id/confirmPasswordField"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>