<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/black">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/crowd_image_signin"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Tonite Alive"
        android:id="@+id/title_text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:textSize="50dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username_field"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:layout_alignParentEnd="true"
        android:hint="@string/username"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_field"
        android:layout_below="@+id/username_field"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:layout_alignParentEnd="true"
        android:hint="@string/password"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:id="@+id/sign_in_button"
        android:layout_below="@+id/password_field"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp"
        android:layout_alignParentEnd="true"
        android:background="@color/colorAccent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/sign_up_button"
        android:layout_below="@+id/sign_in_button"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:id="@+id/forgot_password_button"
        android:layout_below="@+id/sign_up_button"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"/>
</RelativeLayout>